--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ li {
   background-position: center;
   background-repeat: no-repeat;
   text-align: right;
-  background-size: contain;
+  background-size: cover;
 }
 .accordion .sub .container.rightalign.raulveede {
   background-image: url('../images/raulveede.jpg');
