--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a:visited {
 a:link {
   -webkit-transition: color .2s ease;
   -moz-transition: color .2s ease;
-  -o-transition: color .2ss ease;
+  -o-transition: color .2s ease;
 }
 nav, .logo {
   display: inline-block;
